Fix firefox layout issue in PriceInput on order details

--- a/client/extensions/woocommerce/app/order/order-details/style.scss
+++ b/client/extensions/woocommerce/app/order/order-details/style.scss
@@ -189,6 +189,11 @@
 
 		.form-text-input-with-affixes {
 			max-width: 13em;
+
+			.form-currency-input {
+				// Fixed width fixes layout issue in Firefox
+				width: 7em;
+			}
 		}
 
 		.order-details__totals-tax {
